sql/mysql_priv.h
@@ -917,7 +917,6 @@ void decrease_user_connections(USER_CONN *uc);
 void thd_init_client_charset(THD *thd, uint cs_number);
 bool setup_connection_thread_globals(THD *thd);
 bool login_connection(THD *thd);
-void prepare_new_connection_state(THD* thd);
 void end_connection(THD *thd);
 
 bool mysql_create_db(THD *thd, char *db, HA_CREATE_INFO *create, bool silent);
